--- a/action-a/Dockerfile
+++ b/action-a/Dockerfile
@@ -1,1 +1,7 @@
-// idk what is this 
+FROM debian:9.5-slim
+
+ADD entrypoint.sh /entrypoint.sh
+
+RUN chmod +x /entrypoint.sh
+
+ENTRYPOINT ["/entrypoint.sh"]
